<resources>
    <string name="app_name">동네 고영희</string>

    <!--MainActivity-->
    <string name="category_all">전체</string>
    <string name="category_cheese">치즈</string>
    <string name="category_black">올블랙</string>
    <string name="category_mackerel">고등어</string>
    <string name="category_tuxedo">턱시도</string>
    <string name="category_chaos">카오스</string>
    <string name="category_milkcow">얼룩이or젖소</string>
    <string name="cat_home_notification">사료 배급 전 확인하세요!</string>
    <string name="cat_home_notification_text1_1">인적이 드문 길목이나 공원 구석에서 사료를 배급하세요.</string>
    <string name="cat_home_notification_text1_2">• 고양이 울음 소리로부터 이웃 주민들의 생활권을 지켜주기 위해 사료 배급의 위치를 각별히 주의해주세요.</string>
    <string name="cat_home_notification_text2_1">고양이 털만짐을 자제하세요.</string>
    <string name="cat_home_notification_text2_2">• 야외에서 생활하는 고양이는 각종 피부병, 벌레 등에 노출되며 전염될 가능성이 있으니 주의해주세요.</string>
    <string name="cat_home_notification_text3">더 자세한 내용은 고영희 돌봄 가이드를 참고해주세요.</string>
    <!--OnBoardingActivity-->
    <string name="on_boarding_btn">시작하기</string>
    <string name="on_boarding_title">상단 타이틀</string>
    <string name="on_boarding_content">설명설명설명설명설명설명설명설명설명설명</string>
    <!--CatAddActivity-->
    <string name="cat_add_toolbar_title">고영희 추가</string>
    <string name="cat_add_btn_step1">이렇게 생겼어요!</string>
    <string name="cat_add_btn_step2">다음</string>
    <string name="cat_add_btn_step3">등록</string>
    <string name="cat_add_btn_back">이전</string>
    <!--CatAddFragment1-->
    <string name="cat_add_title1">어떻게 생겼나요?</string>
    <string name="cat_add_explain1">실제 생김새를 좌우 선택을 통해 그림으로 나타내주세요.</string>
    <!--CatAddFragment2-->
    <string name="cat_add_title2">고영희를 소개해주세요.</string>
    <string name="cat_add_title_star">*</string>
    <string name="cat_add_name">이름</string>
    <string name="cat_add_name_hint">고양이 이름 입력</string>
    <string name="cat_add_place">주 출몰지</string>
    <string name="cat_add_place_hint">주로 출몰하는 장소 입력</string>
    <string name="cat_add_gender">성별</string>
    <string name="cat_add_gender_hint">성별 선택</string>
    <string name="cat_add_age">추정 나이</string>
    <string name="cat_add_age_hint">고양이 나이 선택</string>
    <string name="cat_add_special_note">특이사항을 입력해주세요.</string>
    <string name="cat_add_special_note_max_length">최대 100자</string>
    <string name="cat_add_special_note_hint">성격, 임신 경험 등 고양이에 대해 알고있는 정보를 함께 공유해주세요.</string>
    <!--CatAddFragment3-->
    <string name="cat_add_title3">추가 정보를 입력해주세요.</string>
    <string name="cat_add_explain3">정확하게 알지 못하는 부분은 무시해도 좋아요.</string>
    <string name="cat_add_tnr">TNR</string>
    <string name="cat_add_tnr_hint">수술 여부 선택</string>
    <string name="cat_add_food">선호 사료</string>
    <string name="cat_add_food_hint">사료 선택</string>
    <string name="cat_add_picture">사진 등록</string>
    <string name="cat_add_picture_max">최대 6장</string>
    <string name="cat_add_picture_select_count">0</string>
    <string name="cat_add_picture_slash">/</string>
    <string name="cat_add_picture_max_count">6</string>

    <!--CatDetailActivity-->
    <string name="cat_detail_tab1_info">정보</string>
    <string name="cat_detail_tab2_note">오늘 기록</string>
    <string name="cat_detail_name">고양이 이름</string>
    <string name="cat_detail_gender">성별</string>
    <string name="cat_detail_age">추정 나이</string>
    <string name="cat_detail_place">XX구 XX동</string>
    <string name="cat_detail_hot_place">주 출몰 장소</string>
    <string name="cat_detail_note">상세 정보</string>
    <string name="cat_detail_edit">수정 버튼</string>
    <string name="cat_detail_rect">구분자</string>
    <string name="cat_detail_cat_img">고양이 이미지</string>
    <!--CatDetailInfoFragment-->
    <string name="cat_detail_info_photo">사진</string>
    <string name="cat_detail_info_photo_count">0</string>
    <string name="cat_detail_info_health">건강 정보</string>
    <string name="cat_detail_info_health_count">0</string>
    <string name="cat_detail_info_health_tnr">TNR</string>
    <string name="cat_detail_info_health_tnr_ex">접종 여부</string>
    <string name="cat_detail_info_health_food">비선호 사료</string>
    <string name="cat_detail_info_health_food_ex">없음</string>
    <string name="cat_detail_info_update_date">최신 업데이트일</string>
    <string name="cat_detail_info_update_date_ex">0000&#45;00&#45;00</string>
    <string name="cat_detail_info_registration_user">등록</string>
    <string name="cat_detail_info_registration_user_ex">닉네임</string>
    <string name="cat_detail_info_another_cat">나도 관심 좀</string>
    <!--CatDetailPostFragment-->
    <string name="cat_detail_recent_post">최근 글</string>
    <string name="cat_detail_recent_post_time">00분 전</string>
    <string name="cat_detail_post_hint">최근 고양이 소식 알리기&#46;&#46;&#46;</string>
    <string name="cat_detail_post_btn">게시</string>
    <!--list_item_cat_detail_post.xml-->
    <string name="cat_detail_list_item_post_nickname">닉네임</string>
    <string name="cat_detail_list_item_recent_post_time">00분 전</string>
    <string name="cat_detail_list_item_content">내용</string>
    <!--btn_dialog_cat_detail_post_more.xml-->
    <string name="btn_dialog_cat_detail_post_more_delete">기록 삭제</string>
    <string name="btn_dialog_cat_detail_post_more_cancel">취소</string>

    <!-- Login Activity -->
    <string name="login_sign_up">회원가입</string>

    <!--custom_dialog.xml-->
    <string name="custom_dialog_title">제목</string>
    <string name="custom_dialog_content">내용</string>
    <string name="custom_dialog_btn_cancel">Cancel</string>
    <string name="custom_dialog_btn_ok">OK</string>

    <!--SearchCatActivity-->
    <string name="cat_search_toolbar_title">고영희 검색</string>
    <!--SearchAddressActivity-->
    <string name="address_search_toolbar_title">동네 설정</string>
    <!-- searchable -->
    <string name="search_hint">사는 동 또는 인근 지하철역</string>
    <string name="search_cat_hint">찾고 있는 고양이 이름 입력</string>
    <string name="search">검색</string>
    <!-- Sidebar drawer main sidebar-->
    <string name="sidebar_care_guide">건강한 봉사를 위한 고영희 돌봄 가이드</string>
    <string name="sidebar_hwagin">확인하기</string>
    <string name="sidebar_notice">공지사항</string>
    <string name="sidebar_customer_service">고객지원</string>
    <string name="sidebar_setting">설정</string>
    <!-- Sidebar drawer main sidebar logged in-->
    <string name="sidebar_login">로그인/회원가입</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>