<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cat_add.CatAddFragment3">

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:max="3"
        android:progress="3"
        android:progressBackgroundTint="@color/beige_F7F3E9"
        android:progressTint="@color/brown_473A22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        android:text="@string/cat_add_title3"
        android:textColor="@color/brown_473A22"
        android:textSize="18sp"
        android:fontFamily="@font/spoqa_han_sans_neo_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:text="@string/cat_add_explain3"
        android:textColor="@color/beige_BBB5A4"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/explain"
        android:columnCount="2"
        android:rowCount="2">
        <TextView
            android:layout_column="0"
            android:layout_row="0"
            android:padding="20dp"
            android:text="@string/cat_add_tnr"
            android:textSize="12sp"
            android:textColor="@color/brown_473A22"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"/>
        <TextView
            android:id="@+id/tnrSpinner"
            android:hint="@string/cat_add_tnr_hint"
            android:textSize="16sp"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:backgroundTint="@color/beige_E3DECF"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_gravity="fill_horizontal"
            android:layout_height="55dp"/>

        <TextView
            android:layout_column="0"
            android:layout_row="1"
            android:padding="20dp"
            android:text="@string/cat_add_food"
            android:textSize="12sp"
            android:textColor="@color/brown_473A22"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"/>
        <TextView
            android:id="@+id/foodSpinner"
            android:hint="@string/cat_add_food_hint"
            android:textSize="16sp"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:backgroundTint="@color/beige_E3DECF"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_gravity="fill_horizontal"
            android:layout_height="55dp"/>
    </GridLayout>

    <TextView
        android:id="@+id/textPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:text="@string/cat_add_picture"
        android:textColor="@color/brown_473A22"
        android:textSize="12sp"
        android:fontFamily="@font/spoqa_han_sans_neo_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/cat_add_picture_max"
        android:textColor="@color/yellow_F1BC35"
        android:textSize="12sp"
        android:fontFamily="@font/spoqa_han_sans_neo_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />


    <Button
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:background="@drawable/btn_round_brown"
        android:text="@string/cat_add_btn_back"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/spoqa_han_sans_neo_regular"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnOK3"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:background="@drawable/btn_enable"
        android:text="@string/cat_add_btn_step3"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/spoqa_han_sans_neo_regular"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBack" />

</androidx.constraintlayout.widget.ConstraintLayout>