<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.cat_add.CatAddFragment2">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/ToolbarTheme"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="@string/cat_add_toolbar_title"
                    app:titleTextAppearance="@style/Toolbar.TitleText" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:max="3"
                    android:progress="2"
                    android:progressBackgroundTint="@color/beige_F7F3E9"
                    android:progressTint="@color/brown_473A22"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/toolBar" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/spoqa_han_sans_neo_bold"
                    android:text="@string/cat_add_title2"
                    android:textColor="@color/brown_473A22"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/progressBar" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/cat_add_title_star"
                    android:textColor="@color/yellow_F1BC35"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/title"
                    app:layout_constraintTop_toTopOf="@+id/progressBar" />

                <GridLayout
                    android:id="@+id/gridLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="20dp"
                    android:columnCount="2"
                    android:rowCount="5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title">

                    <TextView
                        android:layout_row="0"
                        android:layout_column="0"
                        android:fontFamily="@font/spoqa_han_sans_neo_regular"
                        android:padding="20dp"
                        android:text="@string/cat_add_name"
                        android:textColor="@color/brown_473A22"
                        android:textSize="12sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvTown"
                        android:layout_row="0"
                        android:layout_column="1"
                        android:layout_gravity="fill_horizontal"
                        android:backgroundTint="@color/beige_E3DECF"
                        android:drawableEnd="@drawable/ic_search_gray"
                        android:fontFamily="@font/spoqa_han_sans_neo_regular"
                        android:hint="동네 설정"
                        android:paddingStart="4dp"
                        android:paddingEnd="21dp"
                        android:textColorHint="@color/beige_BBB5A4"
                        android:textCursorDrawable="@drawable/edittext_cursor_color"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_row="1"
                        android:layout_column="0"
                        android:fontFamily="@font/spoqa_han_sans_neo_regular"
                        android:padding="20dp"
                        android:text="@string/cat_add_name"
                        android:textColor="@color/brown_473A22"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/editName"
                        android:layout_row="1"
                        android:layout_column="1"
                        android:layout_gravity="fill"
                        android:backgroundTint="@color/beige_E3DECF"
                        android:fontFamily="@font/spoqa_han_sans_neo_regular"
                        android:hint="@string/cat_add_name_hint"
                        android:inputType="text"
                        android:textColorHint="@color/beige_BBB5A4"
                        android:textCursorDrawable="@drawable/edittext_cursor_color"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_row="2"
                        android:layout_column="0"
                        android:fontFamily="@font/spoqa_han_sans_neo_regular"
                        android:padding="20dp"
                        android:text="@string/cat_add_place"
                        android:textColor="@color/brown_473A22"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/editPlace"
                        android:layout_row="2"
                        android:layout_column="1"
                        android:layout_gravity="fill"
                        android:backgroundTint="@color/beige_E3DECF"
                        android:fontFamily="@font/spoqa_han_sans_neo_regular"
                        android:hint="@string/cat_add_place_hint"
                        android:inputType="text"
                        android:textColorHint="@color/beige_BBB5A4"
                        android:textCursorDrawable="@drawable/edittext_cursor_color"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_row="3"
                        android:layout_column="0"
                        android:fontFamily="@font/spoqa_han_sans_neo_regular"
                        android:padding="20dp"
                        android:text="@string/cat_add_gender"
                        android:textColor="@color/brown_473A22"
                        android:textSize="12sp" />

                    <com.example.dongnaegoyang.custom.CustomSpinnerTextView
                        android:id="@+id/genderSpinner"
                        android:layout_height="55dp"
                        android:layout_row="3"
                        android:layout_column="1"
                        android:layout_gravity="fill_horizontal"
                        app:hint="@string/cat_add_gender_hint" />

                    <TextView
                        android:layout_row="4"
                        android:layout_column="0"
                        android:fontFamily="@font/spoqa_han_sans_neo_regular"
                        android:padding="20dp"
                        android:text="@string/cat_add_age"
                        android:textColor="@color/brown_473A22"
                        android:textSize="12sp" />

                    <com.example.dongnaegoyang.custom.CustomSpinnerTextView
                        android:id="@+id/ageSpinner"
                        android:layout_height="55dp"
                        android:layout_row="4"
                        android:layout_column="1"
                        android:layout_gravity="fill_horizontal"
                        app:hint="@string/cat_add_age_hint" />
                </GridLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/spoqa_han_sans_neo_regular"
                    android:text="@string/cat_add_special_note"
                    android:textColor="@color/brown_473A22"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/spoqa_han_sans_neo_regular"
                    android:text="@string/cat_add_special_note_max_length"
                    android:textColor="@color/yellow_F1BC35"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

                <EditText
                    android:id="@+id/editSpecialNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/edit_line_round"
                    android:fontFamily="@font/spoqa_han_sans_neo_regular"
                    android:gravity="top|left"
                    android:hint="@string/cat_add_special_note_hint"
                    android:lines="5"
                    android:maxWidth="5.0dip"
                    android:maxLength="100"
                    android:minWidth="10.0dip"
                    android:padding="16dp"
                    android:scrollHorizontally="false"
                    android:textColorHint="@color/beige_BBB5A4"
                    android:textCursorDrawable="@drawable/edittext_cursor_color"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    tools:ignore="RtlHardcoded" />

                <LinearLayout
                    android:id="@+id/layout"
                    android:layout_width="match_parent"
                    android:layout_height="92dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/editSpecialNote" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:background="@drawable/btn_round_brown"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            android:text="@string/cat_add_btn_back"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnOK2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:background="@drawable/btn_enable"
            android:enabled="false"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            android:text="@string/cat_add_btn_step2"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnBack" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>