<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_round_12">

    <TextView
        android:id="@+id/customTvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/spoqa_han_sans_neo_bold"
        android:text="@string/custom_dialog_title"
        android:textColor="@color/brown_473A22"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/customTvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/spoqa_han_sans_neo_regular"
        android:text="@string/custom_dialog_content"
        android:textColor="@color/brown_473A22"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customTvTitle" />

    <TextView
        android:id="@+id/customTvBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/spoqa_han_sans_neo_bold"
        android:text="@string/custom_dialog_btn_cancel"
        android:textColor="@color/yellow_F1BC35"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/customTvBtn2"
        app:layout_constraintTop_toBottomOf="@+id/customTvContent" />

    <TextView
        android:id="@+id/customTvBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/spoqa_han_sans_neo_bold"
        android:text="@string/custom_dialog_btn_ok"
        android:textColor="@color/yellow_F1BC35"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>