<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_F6F3E9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemTvNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26.5dp"
        android:layout_marginStart="20dp"
        android:text="@string/cat_detail_list_item_post_nickname"
        android:fontFamily="@font/spoqa_han_sans_neo_bold"
        android:textColor="@color/brown_473A22"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/view1"
        app:layout_constraintTop_toTopOf="@+id/view1" />

    <TextView
        android:id="@+id/itemTvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/spoqa_han_sans_neo_regular"
        android:text="@string/cat_detail_list_item_recent_post_time"
        android:textColor="@color/beige_BBB5A4"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/itemTvNickname"
        app:layout_constraintStart_toEndOf="@+id/itemTvNickname"
        app:layout_constraintTop_toTopOf="@+id/itemTvNickname" />

    <TextView
        android:id="@+id/itemTvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="14.5dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/spoqa_han_sans_neo_regular"
        android:text="@string/cat_detail_list_item_content"
        android:textColor="@color/brown_473A22"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemTvNickname" />

</androidx.constraintlayout.widget.ConstraintLayout>