<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_drawer_layout"
    tools:openDrawer="start"
    android:fitsSystemWindows="true">

    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/activity_main"/>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <include
                android:id="@+id/drawer_main_sidebar_logged_in"
                android:visibility="invisible"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/drawer_main_sidebar_logged_in"/>
            <include
                android:id="@+id/drawer_main_sidebar_logged_out"
                android:visibility="visible"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/drawer_main_sidebar_logged_out"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/drawer_main_sidebar_logged_out"
                app:layout_constraintLeft_toLeftOf="parent"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/linearlayout_care"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_sidebar_care"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="24dp">
                    <TextView
                        android:layout_width="102dp"
                        android:layout_height="wrap_content"
                        android:text="@string/sidebar_care_guide"
                        android:textColor="@color/white"
                        android:layout_margin="15dp"
                        android:textSize="13sp"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sidebar_hwagin"
                        android:background="@drawable/bg_sidebar_btn_hwagin"
                        android:textColor="@color/brown_9D917B"
                        android:layout_marginTop="23dp"
                        android:layout_marginLeft="46dp"/>
                </LinearLayout>
                <Button
                    android:id="@+id/btn_notice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sidebar_notice"
                    android:background="@color/transparency"
                    android:textSize="14sp"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="24dp"
                    android:gravity="left|center"/>
                <Button
                    android:id="@+id/btn_customer_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sidebar_customer_service"
                    android:background="@color/transparency"
                    android:textSize="14sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="24dp"
                    android:gravity="left|center"/>
                <Button
                    android:id="@+id/btn_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sidebar_setting"
                    android:background="@color/transparency"
                    android:textSize="14sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="24dp"
                    android:gravity="left|center"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>